--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.13.2",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
+    "lucide-react": "^0.562.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
